# youtube-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
.sisyphus/evidence/: operator-unblock-checklist.md  phase-4-mutating.md  phase-5-repl-probes.md  phase-6-quota-validation.md  phase-7-mcp-handshake.md  phase-7-mcp-tool-names.txt  phase-8-cleanup-manual.md  phase-9-mutating-cutoff.md  phase-9-quota-after-read.txt  phase-9-quota-baseline.txt  phase-9-quota-final.txt  sub-q2-empty-body-audit.md  sub-r2-deprecated-kwargs-audit.md  sub-u-auth-list.txt  sub-u-multi-account-routing.md  sub-u-quota-after.txt  sub-u-quota-before.txt  task-1-scaffolding.txt  task-10-cache.txt  task-11-server.txt  task-12-framework.txt  task-13-allowed.txt  task-13-denied.txt  task-15-registered.txt  task-16-registered.txt  task-17-registered.txt  task-18-registered.txt  task-2-ci-validation.txt  task-2-jobs.txt  task-21-registered.txt  task-22-registered.txt  task-23-registered.txt  task-24-registered.txt  task-25-no-delete.txt  task-25-registered.txt  task-26-registered.txt  task-27-registered.txt  task-28-registered.txt  task-29-registered.txt  task-3-types-tests.txt  (+18 more)
.sisyphus/evidence/final-qa/: qa-report.md
.sisyphus/notepads/youtube-mcp/: decisions.md  issues.md  learnings.md  problems.md
docs/: claude_desktop_config_example.json  opencode_config_example.json
skills/youtube-mcp/: SKILL.md
skills/youtube-mcp/guides/: account-management.md  workflows.md
skills/youtube-mcp/reference/: analytics-api.md  data-api.md  reporting-api.md
src/youtube_mcp/: __init__.py  cli.py  config.py  server.py  types.py
src/youtube_mcp/auth/: __init__.py  accounts.py  oauth_flow.py  token_store.py  wizard.py
src/youtube_mcp/data/: __init__.py  (+1 more)
tests/integration/: conftest.py  test_analytics_reports_query_integration.py  test_reporting_jobs_list_integration.py  test_youtube_channels_list_integration.py
tests/live/: __init__.py  conftest.py  test_acid_mutating_jsigvardt.py  test_acid_read_all_accounts.py
tests/unit/: test_accounts.py  test_acid_read_all_accounts.py  test_all_tools_have_account_param.py  test_cache.py  test_cli.py  test_cli_doctor_exit_code.py  test_destructive_endpoint_absent.py  test_framework.py  test_mutating_guard.py  test_mutating_test_helpers.py  test_mutating_tools_marked.py  test_oauth_flow.py  test_pagination.py  test_quota.py  test_retry.py  test_server.py  test_token_store.py  test_tool_activities.py  test_tool_comment_threads.py  test_tool_i18n.py  test_tool_naming_convention.py  test_tools_analytics_groups.py  test_tools_analytics_reports.py  test_tools_captions.py  test_tools_channel_sections.py  test_tools_channels.py  test_tools_comments.py  test_tools_live_chat.py  test_tools_livestream.py  test_tools_members.py  test_tools_misc.py  test_tools_playlist_images.py  test_tools_playlists.py  test_tools_reporting_jobs.py  test_tools_reporting_reports.py  test_tools_search.py  test_tools_subscriptions.py  test_tools_super_chat_events.py  test_tools_video_assets.py  test_tools_video_meta.py  (+3 more)
(+34 files in other folders)
