[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "youtube-complete-mcp"
version = "0.1.1"
description = "MCP server for YouTube Data, Analytics, and Reporting API workflows"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Joakim Sigvardt" },
]
keywords = ["mcp", "youtube", "youtube-data-api", "youtube-analytics", "youtube-reporting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=2.0",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2",
  "keyring",
  "tenacity",
  "pydantic>=2",
  "httpx",
  "typer",
]

[project.urls]
Homepage = "https://github.com/sigvardt/youtube-mcp"
Repository = "https://github.com/sigvardt/youtube-mcp"
Issues = "https://github.com/sigvardt/youtube-mcp/issues"
Changelog = "https://github.com/sigvardt/youtube-mcp/blob/main/CHANGELOG.md"

[project.scripts]
youtube-complete-mcp = "youtube_mcp.cli:main"
youtube-mcp = "youtube_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.DS_Store",
  "/.omo",
  "/.playwright-mcp",
  "/.sisyphus",
  "/.venv",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-vcr",
  "respx",
  "ruff",
  "mypy",
  "pyright",
  "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
markers = [
  "live: tests that call live YouTube APIs and require RUN_LIVE_TESTS=1",
  "mutating: tests that mutate live YouTube API state",
]

[tool.coverage.run]
source = ["src/youtube_mcp"]

[tool.coverage.report]
fail_under = 85
